# KeepLiveService

./: .gitignore  README.md  proguard-dictionary.txt  settings.gradle.kts  test_bluetooth_broadcast.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/google/services/: MainActivity.kt  MyApp.kt
app/src/main/java/com/google/services/util/: PermissionHelper.kt
app/src/main/res/values/: themes.xml
framework/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
framework/src/main/: AndroidManifest.xml
framework/src/main/cpp/: CMakeLists.txt  fw_daemon.cpp  fw_jni.cpp  fw_process.cpp  fw_socket.cpp
framework/src/main/java/com/service/framework/: Fw.kt
framework/src/main/java/com/service/framework/account/: AuthenticatorService.kt  FwAuthenticator.kt  FwSyncAdapter.kt  StubContentProvider.kt  SyncService.kt
framework/src/main/java/com/service/framework/core/: FwConfig.kt
framework/src/main/java/com/service/framework/native/: FwNative.kt
framework/src/main/java/com/service/framework/observer/: ContentObserverManager.kt  FileObserverManager.kt
framework/src/main/java/com/service/framework/receiver/: BluetoothReceiver.kt  DynamicEventReceiver.kt  MediaButtonReceiver.kt  MediaMountReceiver.kt  NfcReceiver.kt  SystemEventReceiver.kt  UsbReceiver.kt  WifiReceiver.kt
framework/src/main/res/values/: strings.xml
framework/src/main/res/xml/: accessibility_service_config.xml  authenticator.xml  nfc_tech_list.xml  syncadapter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
